--- a/Natours/scss/base/_base.scss
+++ b/Natours/scss/base/_base.scss
@@ -10,10 +10,14 @@
 
 html {
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
   font-family: $font-primary;
+  font-weight: 400;
   color: $color-grey-dark;
+  line-height: 1.7;
   padding: 3rem;
+  background-color: color-grey-light-2;
 }
