--- a/Natours/scss/base/_typography.scss
+++ b/Natours/scss/base/_typography.scss
@@ -2,8 +2,8 @@
 
 // Rubik font
 @font-face {
-  font-family: 'Rubik';
-  src: url('../assets/webfonts/Lato/Lato-Regular.ttf') format('truetype');
+  font-family: 'Montserrat';
+  src: url('../assets/webfonts/Montserrat/Montserrat-Medium.ttf') format('truetype');
 }
 
 .heading-primary {
@@ -13,8 +13,8 @@
 
   &--main {
     display: block;
-    font-size: 6.2rem;
-    letter-spacing: 0.8em;
+    font-size: 7.4rem;
+    letter-spacing: 0.5em;
     margin-bottom: 1.6rem;
     font-weight: 400;
     animation: moveInLeft 1s ease-in;
@@ -28,5 +28,32 @@
     font-weight: 700;
     animation: moveInRight 1s ease-in;
     backface-visibility: hidden;
+  }
+}
+
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 0.2rem;
+  transition: all 0.2s;
+
+  &:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
+  }
+}
+
+.heading-tertiary {
+  font-size: 2rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.paragraph {
+  font-size: 1.6rem;
+
+  &:not(:last-child) {
+    margin-bottom: 3rem;
   }
 }
