--- a/Natours/scss/components/_button.scss
+++ b/Natours/scss/components/_button.scss
@@ -5,14 +5,12 @@
   &:visited {
     position: relative;
     display: inline-block;
-    font-size: 1.8rem;
     text-decoration: none;
+    font-size: 1.6rem;
     text-transform: uppercase;
-    color: inherit;
-    background-color: $color-white;
-    padding: 2.4rem 3.2rem;
+    padding: 2.4rem 4.8rem;
     border-radius: 10rem;
-    transition: all 0.4s;
+    transition: all 0.2s;
   }
 
   &::after {
@@ -22,11 +20,28 @@
     height: 100%;
     position: absolute;
     border-radius: 10rem;
-    background-color: $color-white;
-    z-index: -1;
+    z-index: $z-index-btn-after;
     top: 0;
     left: 0;
     transition: all 0.4s;
+  }
+
+  &--white {
+    background-color: $color-white;
+    color: $color-grey-dark;
+
+    &::after {
+      background-color: $color-white;
+    }
+  }
+
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+
+    &::after {
+      background-color: $color-primary;
+    }
   }
 
   &:hover {
