--- a/Natours/scss/main.scss
+++ b/Natours/scss/main.scss
@@ -2,9 +2,12 @@
 
 @use 'base/animations';
 @use 'base/typography';
+@use 'base/utilities';
 @use 'base/base';
 
 @use 'components/button';
 
 @use 'layout/header';
 @use 'layout/navigation';
+
+@use 'pages/home';
