feat: add about section

--- a/Natours/scss/abstracts/_variables.scss
+++ b/Natours/scss/abstracts/_variables.scss
@@ -32,4 +32,6 @@ $color-black: #000;
 $z-index-btn-after: -10;
 $z-index-nav-toggle: 1000;
 $z-index-nav-background: 800;
+$z-index-about-img: 10;
+$z-index-about-img--active: 20;
 $z-index-nav: 900;
