--- a/Natours/css/main.css
+++ b/Natours/css/main.css
@@ -72,6 +72,9 @@
   font-weight: 700;
   letter-spacing: 0.2rem;
   transition: all 0.2s;
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  background-clip: text;
+  color: transparent;
 }
 .heading-secondary:hover {
   transform: skewY(2deg) skewX(15deg) scale(1.1);
@@ -178,6 +181,26 @@ body {
 .btn--animated {
   animation: moveInBottom 0.5s ease-in 0.5s;
   animation-fill-mode: backwards;
+}
+
+.btn-text:link, .btn-text:visited {
+  font-size: 1.6rem;
+  color: #55c57a;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid #55c57a;
+  padding: 3px;
+  transition: all 0.2s;
+}
+.btn-text:hover {
+  background-color: #55c57a;
+  color: #fff;
+  transform: translateY(-0.2rem);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+}
+.btn-text:active {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  transform: translateY(0);
 }
 
 .header {
@@ -307,6 +330,36 @@ body {
 }
 .about__heading-tertiary {
   margin-bottom: 1.6rem;
+}
+.about__images {
+  position: relative;
+}
+.about__img {
+  width: 55%;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+  border-radius: 2px;
+  position: absolute;
+  z-index: 10;
+  transition: all 0.2s;
+  outline-offset: 2rem;
+}
+.about__img--1 {
+  left: 0;
+  top: -2rem;
+}
+.about__img--2 {
+  right: 0;
+  top: 2rem;
+}
+.about__img--3 {
+  left: 20%;
+  top: 10rem;
+}
+.about__img:hover {
+  outline: 1.5rem solid #55c57a;
+  transform: scale(1.05) translateY(-0.5rem);
+  box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
+  z-index: 20;
 }
 
 /*# sourceMappingURL=main.css.map */
