--- a/Natours/scss/base/_typography.scss
+++ b/Natours/scss/base/_typography.scss
@@ -37,6 +37,9 @@
   font-weight: 700;
   letter-spacing: 0.2rem;
   transition: all 0.2s;
+  background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+  background-clip: text;
+  color: transparent;
 
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
